--- a/flash-cards/card.html
+++ b/flash-cards/card.html
@@ -17,9 +17,13 @@
       <div class="container">
           <button class="login">Login</button>
       </div>
-    <div class="card">
-        <div class="front">JS</div>
-        <div class="back">Javascript</div>
-    </div>
+
+<!--flash card starts    -->
+        <div class="card">
+            <div class="front">JS</div>
+            <div class="back">Javascript</div>
+        </div>
+<!--flash card stops    -->
+
     </body>
 </html>
