--- a/flash-cards/flash-cards.html
+++ b/flash-cards/flash-cards.html
@@ -6,43 +6,88 @@
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap"
           rel="stylesheet">
+    <link rel="stylesheet" href="transform.css">
 </head>
 <body>
-<div>
-    <h1>What is the capital of ...</h1>
-</div>
+    <div>
+        <h1>What is the capital of ...</h1>
+    </div>
 
-<!--    start block of cards   -->
-<div id="card-box">
-    <div>
-        <p>Ukraine</p>
+    <!--    start block of cards   -->
+    <div id="card-box">
+        <div class="card">
+            <div class="front">
+                <p>Ukraine</p>
+            </div>
+            <div class="back">
+                <p>Kyiv</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="front">
+                <p>Finland</p>
+            </div>
+            <div class="back">
+                <p>Helsinki</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="front">
+                <p>Spain</p>
+            </div>
+            <div class="back">
+                <p>Madrid</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="front">
+                <p>Israel</p>
+            </div>
+            <div class="back">
+                <p>Jerusalem</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="front">
+                <p>Norway</p>
+            </div>
+            <div class="back">
+                <p>Oslo</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="front">
+                <p>Iceland</p>
+            </div>
+            <div class="back">
+                <p>Reykjavík</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="front">
+                <p>Canada</p>
+            </div>
+            <div class="back">
+                <p>Ottawa</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="front">
+                <p>Sweden</p>
+            </div>
+            <div class="back">
+                <p>Stockholm</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="front">
+                <p>Japan</p>
+            </div>
+            <div class="back">
+                <p>Tokyo</p>
+            </div>
+        </div>
     </div>
-    <div>
-        <p>Finland</p>
-    </div>
-    <div>
-        <p>Spain</p>
-    </div>
-    <div>
-        <p>Israel</p>
-    </div>
-    <div>
-        <p>Norway</p>
-
-    </div>
-    <div>
-        <p>Iceland</p>
-    </div>
-    <div>
-        <p>Canada</p>
-    </div>
-    <div>
-        <p>Sweden</p>
-    </div>
-    <div>
-        <p>Japan</p>
-    </div>
-</div>
 <!--    stop block of cards   -->
 
 </body>
