linked Virtual Piano project

--- a/src/projects.html
+++ b/src/projects.html
@@ -37,14 +37,17 @@
 <section id="portfolio">
     <h2 >My Projects</h2>
     <div class="flex-container">
-        <div>
-            <img alt="Yandex" src="../images/yandex.png">
-            <!-- Trigger/Open The Modal -->
-            <button class="open-window honolulu-blue" id="button1">Open Modal</button>
+        <div class="project">
+            <a href="../virtual-piano/virtual-piano.html">
+                <img class="project__image" alt="Virtual piano" src="../images/virtual-piano.jpg">
+            </a>
+            <a href="../virtual-piano/virtual-piano.html">
+                <button class="honolulu-blue project__button" >Virtual piano</button>
+            </a>
             <p></p>
         </div>
         <div>
-            <img alt="Russian language" src="../images/russian.png">
+            <img alt="Virtual piano" src="../images/russian.png">
             <!-- Trigger/Open The Modal -->
             <button class="open-window honolulu-blue" id="button2">Russian language teacher</button>
             <p></p>
@@ -63,13 +66,6 @@
         </div>
     </div>
     <!-- The Modal -->
-    <div id="window1" class="window">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close" id="span">&times;</span>
-            <p>Some text in the Modal 1..</p>
-        </div>
-    </div>
     <div id="window2" class="window">
         <!-- Modal content -->
         <div class="modal-content">
