--- a/flash-cards/card.html
+++ b/flash-cards/card.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>3D card</title>
-        <link rel="stylesheet" href="3D-card.css">
-    </head>
-    <body>
+<meta charset="UTF-8">
+<title>3D card</title>
+<link rel="stylesheet" href="3D-card.css">
+<body>
     <nav>
-        <img src="https://ucarecdn.com/51dbca43-8d86-404c-83af-d4e2a197ac07/" />
-        <img src="https://ucarecdn.com/b5644651-3ee8-4365-8ca8-31368f17d922/" />
-        <img src="https://ucarecdn.com/24a6f05c-5c77-4e09-b488-c6746c6a2305/" />
-        <img src="https://ucarecdn.com/9717e0ac-d87c-4589-8696-62b85920e3d5/" />
+        <img src="https://ucarecdn.com/51dbca43-8d86-404c-83af-d4e2a197ac07/"  alt="card"/>
+        <img src="https://ucarecdn.com/b5644651-3ee8-4365-8ca8-31368f17d922/" alt="smile"/>
+        <img src="https://ucarecdn.com/24a6f05c-5c77-4e09-b488-c6746c6a2305/" alt="bell"/>
+        <img src="https://ucarecdn.com/9717e0ac-d87c-4589-8696-62b85920e3d5/" alt="man"/>
     </nav>
       <div id="div1">HELLO</div>
       <div id="div2">HELLO</div>
