add second project on the projects.html

--- a/case-converter/case-converter.html
+++ b/case-converter/case-converter.html
@@ -10,9 +10,9 @@
             <h1>Case Converter</h1>
         </div>
 
-        <div>
+        <div id="container">
             <div>
-                <textarea></textarea>
+                <textarea autofocus placeholder="Enter your text"></textarea>
             </div>
             <div>
                 <button id="upper-case" class="indigo-dye open-window">Upper Case</button>
