--- a/src/projects.html
+++ b/src/projects.html
@@ -27,13 +27,15 @@
 <!-- End of Nav section -->
 
 <header class="indigo-dye">
-    <h1 class="header-item">Volha Lukashevich, QA</h1>
+    <a href="./index.html">
+        <h1 class="header-item">Volha Lukashevich, QA</h1>
+    </a>
 </header>
 
 <body class="honolulu-blue">
 
 
-<!-- Portfolio section -->
+<!-- My Projects section -->
 <section id="portfolio">
     <h2 >My Projects</h2>
     <div class="flex-container">
@@ -47,51 +49,21 @@
             <p></p>
         </div>
         <div>
-            <img alt="Virtual piano" src="../images/russian.png">
-            <!-- Trigger/Open The Modal -->
-            <button class="open-window honolulu-blue" id="button2">Russian language teacher</button>
+            <a href="../case-converter/case-converter.html">
+                <img class="project__image" alt="Case converter" src="../images/case-converter.jpg">
+            </a>
+            <a href="../case-converter/case-converter.html">
+                <button class="open-window honolulu-blue" id="button2">Case converter</button>
+            </a>
             <p></p>
         </div>
-        <div>
-            <img alt="Intellectual games" src="../images/owl2.png">
-            <!-- Trigger/Open The Modal -->
-            <button class="open-window honolulu-blue" id="button3">What? Where? When?</button>
-            <p></p>
-        </div>
-        <div>
-            <img id="projects" alt="My Projects" src="../images/projects.png">
-            <!-- Trigger/Open The Modal -->
-            <button class="open-window honolulu-blue" id="button4">My Projects</button>
-            <p></p>
-        </div>
-    </div>
-    <!-- The Modal -->
-    <div id="window2" class="window">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close" id="span2">&times;</span>
-            <p>Some text in the Modal 2..</p>
-        </div>
-    </div>
-    <div id="window3" class="window">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close" id="span3">&times;</span>
-            <p>Some text in the Modal 3..</p>
-            <audio controls>
-                <source src="../media/chtoGdeKogda.mp3" type="audio/mpeg">
-            </audio>
-        </div>
-    </div>
-    <div id="window4" class="window">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close" id="span4">&times;</span>
-            <p>There will be my projects</p>
-        </div>
-    </div>
+
+
+
+
+
 </section>
-<!-- End of portfolio -->
+<!-- End of My Projects section -->
 
 <!-- Contacts section -->
 <section id="contacts" class="indigo-dye">
