--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,11 @@
     </head>
 
 <!-- Nav section -->
+<div>
     <nav class="indigo-dye">
-     <div class="logo"><a href="./index.html">Logo</a></div>
+        <div class="logo"><a href="./index.html">Logo</a></div>
         <ul class="nav-links">
-         <li ><a href="#about">About me</a></li>
+            <li ><a href="#about">About me</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contacts">Contacts</a></li>
             <li><a href="./projects.html" tabindex="-1">My Projects</a></li>
@@ -24,24 +25,25 @@
             <div class="line3"></div>
         </div>
     </nav>
-<!-- End of Nav section -->
-
+    <!-- End of Nav section -->
     <header class="indigo-dye">
         <h1 class="header-item">Volha Lukashevich, QA</h1>
     </header>
-
-    <body class="honolulu-blue">
-
+</div>
+<body class="honolulu-blue">
 <!-- About section -->
         <section id="about">
             <div><img alt="My photo" src="../images/me2.JPG"></div>
             <div class="indigo-dye">
                 <div>
                     <h2>About me</h2>
-                    <p>Hi, I'm Volha Lukashevich. I've been a Yandex assessor for 10 months.</p>
-                    <p>I love learning and there's always more to learn in software testing.</p>
-                    <p>Tester is one who essentially helps a company build a better product for customers, and it is very important for me.</p>
-                    <p>I like to look at things from different angles, and I think this skill is important in software testing.</p>
+                    <p>Hello, everyone! My name's Volha Lukashevich.</p>
+                    <p></p>
+                    <p>I'm from Belarus.</p>
+                    <p>I have 20 years of experience in the education field.</p>
+                    <p>Now I'm working as an assessor-tester at Yandex.</p>
+                    <p>Yandex is a big international company that makes great products.</p>
+                    <p>And I'm excited to be able to help them to become better.</p>
                 </div>
             </div>
         </section>
@@ -109,9 +111,10 @@
                 </div>
             </div>
         </section>
+</body>
 <!-- End of portfolio -->
-
 <!-- Contacts section -->
+    <div>
         <section id="contacts" class="indigo-dye">
             <h2 class="contacts-item" id="#contacts">Contacts</h2>
             <p class="contacts-item">You can contact me at <a  href=>volllga.goo@gmail.com</a> </p>
@@ -128,5 +131,5 @@
             <p>This is an education project. Thanks very much <a href="https://hyperskill.org/" title="Go to JetBrains Academy">JetBrains Academy</a> </p>
             <p> 2022 </p>
         </footer>
-    </body>
+    </div>
 </html>
