--- a/src/projects.html
+++ b/src/projects.html
@@ -12,11 +12,11 @@
 <nav class="indigo-dye">
     <div class="logo"><a href="./index.html">Logo</a></div>
     <ul class="nav-links">
-        <li ><a href="#about">About me</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li ><a href="./index.html#about">About me</a></li>
+        <li><a href="./index.html#portfolio">Portfolio</a></li>
         <li><a href="#contacts">Contacts</a></li>
         <li><a href="./projects.html" tabindex="-1">My Projects</a></li>
-        <li ><a href="#about">Home</a></li>
+        <li ><a href="./index.html">Home</a></li>
     </ul>
     <div class="hamburger">
         <div class="line1"></div>
@@ -54,6 +54,15 @@
                 </a>
                 <a href="../case-converter/case-converter.html">
                     <button class="open-window honolulu-blue" id="button2">Case converter</button>
+                </a>
+                <p></p>
+            </div>
+            <div class="project">
+                <a href="../flash-cards/flash-cards.html">
+                    <img class="project__image" alt="Virtual piano" src="../images/flash-cards.jpg">
+                </a>
+                <a href="../flash-cards/flash-cards.html">
+                    <button class="honolulu-blue project__button" >Flash cards</button>
                 </a>
                 <p></p>
             </div>
