add iframes on main page

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,14 @@
                     <p>Now I'm working as an assessor-tester at Yandex.</p>
                     <p>Yandex is a big international company that makes great products.</p>
                     <p>And I'm excited to be able to help them to become better.</p>
+                    <iframe title="Iframe | Target Example" src="./projects.html"
+                            name="my_iframe" height="300px" width="100%" ></iframe>
+
+                    <p><a href="https://www.rainviewer.com/map.html?loc=40.7831,-73.9712,6&oFa=0&oC=0&oU=0&
+                    oCS=1&oF=0&oAP=0&rmt=4&c=1&o=83&lm=0&th=0&sm=1&sn=1" target="my_iframe">
+                        Testing my target from a link</a></p>
+
+                    <p>When the target attribute of a link matches the name of an iframe, the Rainviewer link will open in the iframe.</p>
                 </div>
             </div>
         </section>
