add video and fix Case converter

--- a/src/index.html
+++ b/src/index.html
@@ -39,19 +39,31 @@
                     <h2>About me</h2>
                     <p>Hello, everyone! My name's Volha Lukashevich.</p>
                     <p></p>
-                    <p>I'm from Belarus.</p>
+                    <p>I'm from Belarus. My hometown is Bobruisk.</p>
                     <p>I have 20 years of experience in the education field.</p>
-                    <p>Now I'm working as an assessor-tester at Yandex.</p>
-                    <p>Yandex is a big international company that makes great products.</p>
-                    <p>And I'm excited to be able to help them to become better.</p>
-                    <iframe title="Iframe | Target Example" src="./projects.html"
-                            name="my_iframe" height="300px" width="100%" ></iframe>
+                    <p>Now I'm working as an assessor-tester at Yandex.
+                        <a href="https://yandex.ru/all" target="_blank">Yandex</a>
+                    is a big international company that makes great products.
+                    And I'm excited to be able to help them to become better.</p>
+                    <p>My favorite book is <q>Three Men in a Boat</q> by Jerome K. Jerome.</p>
+                    <q>Let your boat of life be light, packed with only what you need -
+                    a homely home and simple pleasures, one or two friends,
+                    worth the name, someone to love and someone to love you,
+                    a cat, a dog, and a pipe or two, enough to eat and enough
+                    to wear, and a little more than enough to drink;
+                    for thirst is a dangerous thing</q>.
 
-                    <p><a href="https://www.rainviewer.com/map.html?loc=40.7831,-73.9712,6&oFa=0&oC=0&oU=0&
-                    oCS=1&oF=0&oAP=0&rmt=4&c=1&o=83&lm=0&th=0&sm=1&sn=1" target="my_iframe">
-                        Testing my target from a link</a></p>
+<!-- Start Example of iframe-->
+<!--                    <iframe title="Iframe | Target Example" src="./projects.html"-->
+<!--                            name="my_iframe" height="300px" width="100%" ></iframe>-->
+<!--                    <p><a href="https://www.rainviewer.com/map.html?loc=40.7831,-73.9712,6&oFa=0&oC=0&oU=0&-->
+<!--                    oCS=1&oF=0&oAP=0&rmt=4&c=1&o=83&lm=0&th=0&sm=1&sn=1" target="my_iframe">-->
+<!--                        Testing my target from a link</a></p>-->
 
-                    <p>When the target attribute of a link matches the name of an iframe, the Rainviewer link will open in the iframe.</p>
+<!--                    <p>When the target attribute of a link matches the name of an iframe,-->
+<!--                        the Rainviewer link will open in the iframe.</p>-->
+<!-- End Example of iframe-->
+
                 </div>
             </div>
         </section>
@@ -91,7 +103,10 @@
                 <!-- Modal content -->
                 <div class="modal-content">
                     <span class="close" id="span">&times;</span>
-                    <p>Some text in the Modal 1..</p>
+                    <p>Regression testing of web and mobile apps according to ready-made scenarios</p>
+                    <p>Search for bugs and reporting them in the Yandex.Tracker</p>
+                    <p>Exploratory testing (to test new features)</p>
+                    <video controls="controls" src="../media/yandex.mp4"></video>
                 </div>
             </div>
             <div id="window2" class="window">
