text-shadow to the logo and new project cofee machine

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <!-- Nav section -->
 <div>
     <nav class="indigo-dye">
-        <div class="logo"><a href="./index.html">Logo</a></div>
+        <div class="logo"><a href="./index.html">LOGO</a></div>
         <ul class="nav-links">
             <li ><a href="#about">About me</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
