add shadow to the boxes and buttons

--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,8 @@
 <body class="honolulu-blue">
 <!-- About section -->
         <section id="about">
-            <div><img alt="My photo" src="../images/me2.JPG"></div>
-            <div class="indigo-dye">
-                <div>
+            <img class="box-shadow" alt="My photo" src="../images/me2.JPG">
+            <div class="indigo-dye box-shadow">
                     <h2>About me</h2>
                     <p>Hello, everyone! My name's Volha Lukashevich.</p>
                     <p></p>
@@ -64,7 +63,7 @@
 <!--                        the Rainviewer link will open in the iframe.</p>-->
 <!-- End Example of iframe-->
 
-                </div>
+
             </div>
         </section>
 <!-- End of about -->
@@ -73,25 +72,25 @@
         <section id="portfolio">
             <h2 >Portfolio</h2>
             <div class="flex-container">
-                <div>
+                <div class="box-shadow">
                     <img alt="Yandex" src="../images/yandex.png">
                     <!-- Trigger/Open The Modal -->
                     <button class="open-window honolulu-blue" id="button1">Open Modal</button>
                     <p></p>
                 </div>
-                <div>
+                <div class="box-shadow">
                     <img alt="Russian language" src="../images/russian.png">
                     <!-- Trigger/Open The Modal -->
                     <button class="open-window honolulu-blue" id="button2">Russian language teacher</button>
                     <p></p>
                 </div>
-                <div>
+                <div class="box-shadow">
                     <img alt="Intellectual games" src="../images/owl2.png">
                     <!-- Trigger/Open The Modal -->
                     <button class="open-window honolulu-blue" id="button3">What? Where? When?</button>
                     <p></p>
                 </div>
-                <div>
+                <div class="box-shadow">
                     <img id="projects" alt="My Projects" src="../images/projects.png">
                     <!-- Trigger/Open The Modal -->
                     <button class="open-window honolulu-blue" id="button4">My Projects</button>
